--- a/webdev/module2-solution/index.html
+++ b/webdev/module2-solution/index.html
@@ -3,24 +3,40 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <title>Assignment Solution for Module 2</title>
 </head>
 <body>
     <h1>Our Menu</h1>
 
-    <div id="chicken" class="col-lg col-md col-sm">
-        <h2>Chicken</h2>
-        <p>Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.</p>
+    <div class="responsive col-lg-4 col-md-6 col-sm-12">
+        <div id="chicken" class="section">
+            <h2>Chicken</h2>
+            <p>
+            Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.
+            </p>
+        </div>
     </div>
 
-    <div id="beef" class="col-lg col-md col-sm">
-        <h2>Beef</h2>
-        <p>Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.</p>
+    <div class="responsive col-lg-4 col-md-6 col-sm-12">
+        <div id="beef" class="section">
+            <h2>Beef</h2>
+            <p>
+            Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.
+            </p>
+        </div>
     </div>
 
-    <div id="sushi" class="col-lg col-md col-sm">
-        <h2>Sushi</h2>
-        <p>Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.</p>
+    <div class="responsive col-lg-4 col-md-12 col-sm-12">
+        <div id="sushi" class="section">
+            <h2>Sushi</h2>
+            <p>
+            Lorem ipsum dolor sit amet, zril feugait tractatos vim ut. Inermis vivendum ex mea. Sed mutat solet ea, sit dicam signiferumque ad. Nonumy labores dignissim id nec, at has solet ancillae oporteat, cibo vidisse has in. Adolescens ullamcorper eum ut. Sit at vero labores vivendo, sit in altera repudiare. Usu scripta quaestio cu, per eu falli tantas invenire.
+            </p>
+        </div>
     </div>
+
 </body>
 </html>
