--- a/webdev/module3-solution/index.html
+++ b/webdev/module3-solution/index.html
@@ -52,7 +52,7 @@
     <section class="container-fluid" id="page-content">
         <h2 class="text-center" id="our-menu">Our Menu</h2>
         
-        <div class="col-xs-12">
+        <div class="col-xs-12" id="tall-section">
             <h3 class="text-center">Chicken</h3>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi felis lorem, vestibulum in malesuada ac, accumsan et ligula. Aenean nec leo vel odio suscipit mattis. Curabitur luctus pharetra lectus non commodo. Curabitur commodo ultricies dolor quis tincidunt. Aliquam pharetra ante lectus. Sed gravida facilisis varius. Duis molestie id lacus at dictum. Donec sed mi id mi efficitur sodales. Nullam id maximus justo, semper imperdiet ligula.</p>
