--- a/webdev/module3-solution/optional.html
+++ b/webdev/module3-solution/optional.html
@@ -37,11 +37,11 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-navbar-collapse">
                 <ul class="nav navbar-nav visible-xs text-center" id="nav-list">
-                    <li><a href="#">Chicken</a></li>
+                    <li><a href="#chicken">Chicken</a></li>
                     <hr />
-                    <li><a href="#">Beef</a></li>
+                    <li><a href="#beef">Beef</a></li>
                     <hr />
-                    <li><a href="#">Sushi</a></li>
+                    <li><a href="#sushi">Sushi</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
